# Equalizer

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/aaron/equalizer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  equalizer.cpp
app/src/main/cpp/Superpowered/: Superpowered.h
app/src/main/java/com/aaron/equalizer/: FileManagerActivity.kt  MainActivity.kt
app/src/main/java/com/aaron/equalizer/audio/: SuperpoweredEQ.kt
app/src/main/java/com/aaron/equalizer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/test/java/com/aaron/equalizer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
